cleanup, using static factory methods, renaming classes according to their real roles